// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<button
  aria-label="Toggle"
  className="  css-1veo4a4"
  role="switch"
  type="button"
>
  <div
    className="css-vvwdnd"
    style={
      Object {
        "left": 0,
        "position": "absolute",
        "top": 0,
        "transform": "translateX(0)",
        "transitionDuration": "0.1s",
        "transitionProperty": "transform",
        "transitionTimingFunction": "ease-out",
      }
    }
  />
</button>
`;

exports[`renders checked 1`] = `
<button
  aria-checked={true}
  aria-label="Toggle"
  className=" active css-1lodfny"
  role="switch"
  type="button"
>
  <div
    className="css-vvwdnd"
    style={
      Object {
        "left": 0,
        "position": "absolute",
        "top": 0,
        "transform": "translateX(100%)",
        "transitionDuration": "0.1s",
        "transitionProperty": "transform",
        "transitionTimingFunction": "ease-out",
      }
    }
  />
</button>
`;

exports[`renders with icons 1`] = `
<button
  aria-label="Toggle"
  className="  css-1veo4a4"
  role="switch"
  type="button"
>
  <span
    className="css-1n11h4v"
  >
    on
  </span>
  <span
    className="css-1n11h4v"
  >
    off
  </span>
  <div
    className="css-vvwdnd"
    style={
      Object {
        "left": 0,
        "position": "absolute",
        "top": 0,
        "transform": "translateX(0)",
        "transitionDuration": "0.1s",
        "transitionProperty": "transform",
        "transitionTimingFunction": "ease-out",
      }
    }
  />
</button>
`;
